--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,32 @@
+version: '3.8'
+
+services:
+  app:
+    build:
+      context: .
+    container_name: flask-app
+    ports:
+      - "5000:5000"          # Map port 5000 on the host to port 5000 in the container
+    environment:
+      - MYSQL_HOST=mysql     # MySQL service name (defined below)
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=Mohana@04
+      - MYSQL_DB=museum
+    depends_on:
+      - mysql                # Wait for MySQL service to be ready
+
+  mysql:
+    image: mysql:8.0         # Use the official MySQL 8.0 image
+    container_name: mysql-db
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: Mohana@04
+      MYSQL_DATABASE: museum
+    ports:
+      - "3306:3306"          # Map port 3306 for MySQL access
+    volumes:
+      - mysql_data:/var/lib/mysql # Persist data in a Docker volume
+
+volumes:
+  mysql_data:
 
