--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,22 @@
+services:
+  - type: web
+    name: flask-app
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: python app.py
+    envVars:
+      - key: MYSQL_HOST
+        value: mysql
+      - key: MYSQL_USER
+        value: root
+      - key: MYSQL_PASSWORD
+        value: Mohana@04
+      - key: MYSQL_DB
+        value: museum
+    dependsOn:
+      - name: mysql-db
 
+  - type: private_service
+    name: mysql-db
+    env: docker
+    dockerfilePath: ./Dockerfile.mysql
